Revision history for Perl module Net::Mosso::CloudFiles:

0.34
    - Retry upon errors using LWP::UserAgent::Determined

0.33 Tue Jan 13 09:04:11 GMT 2009
    - Add getting and putting to files
    - Prohibit UTF8 key names
    - Change the default content type from text/plain to 
      application/octet-stream

0.32 Wed Oct 22 23:01:11 BST 2008
	- First release