@@ -10,6 +10,8 @@ has 'container' =>
     ( is => 'ro', isa => 'Net::Mosso::CloudFiles::Container', required => 1 );
 has 'name' => ( is => 'ro', isa => 'Str', required => 1 );
 
+__PACKAGE__->meta->make_immutable;
+
 sub url {
     my ($self) = @_;
     $self->cloudfiles->storage_url . '/'
